--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,13 @@
 /* CSS Document */
 :root {
     --mdc-theme-primary: #0674ed;
+	--mdc-theme-secondary: #f7941d;
 }
 
 .mdc-select:not(.mdc-select--disabled).mdc-select--focused .mdc-floating-label {
+    color: rgba(6, 116, 237, 0.87);
+}
+.mdc-text-field--focused:not(.mdc-text-field--disabled) .mdc-floating-label {
     color: rgba(6, 116, 237, 0.87);
 }
 
